k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tennis-coach
  labels:
    name: tennis-coach
